Se agregó el connection string al web config.

--- a/ROP/ROP/Web.config
+++ b/ROP/ROP/Web.config
@@ -54,4 +54,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="MySqlConnectionString" connectionString="server=localhost;userid=root;password=root;database=sec_des" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
 </configuration>
