--- a/ROP/ROP/ROP.vbproj
+++ b/ROP/ROP/ROP.vbproj
@@ -144,11 +144,14 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\estilo2.css" />
+    <Content Include="Content\style.css" />
     <Content Include="Content\jquery.datepicker.css" />
+    <Content Include="MenuCalculadoras.aspx" />
+    <Content Include="RentaPermanente.aspx" />
     <Content Include="Scripts\jquery.datepicker.js" />
     <Content Include="Scripts\jquery.datepicker.min.js" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -192,7 +195,9 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="validation.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Bundle.config" />
   </ItemGroup>
   <ItemGroup>
