Nueva Version SEC

--- a/ROP/ROP/ROP.vbproj
+++ b/ROP/ROP/ROP.vbproj
@@ -230,6 +230,7 @@
       <DependentUpon>RentaPermanente.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="RetiroProgramado.vb" />
     <Compile Include="Site.Master.designer.vb">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
