--- a/ROP/ROP/Web.config
+++ b/ROP/ROP/Web.config
@@ -45,9 +45,9 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <!--<add name="MySqlConnectionString" connectionString="server=localhost;userid=root;password=root;database=sec_des" providerName="MySql.Data.MySqlClient"/>-->
-    <add name="MySqlConnectionString"
+    <add name="MySqlConnectionString" connectionString="server=localhost;userid=root;password=root;database=sec_des" providerName="MySql.Data.MySqlClient"/>
+    <!--<add name="MySqlConnectionString"
       connectionString="Data Source=localhost;Initial Catalog=Supen;User ID=admin; Password=admin;MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 </configuration>
